// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render properly with one child 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "backgroundColor": "#FFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        },
      ]
    }
  >
    <View />
  </View>
</RCTSafeAreaView>
`;

exports[`should render properly with several children 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Array [
      Object {
        "backgroundColor": "#FFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingHorizontal": 10,
          "paddingVertical": 10,
        },
      ]
    }
  >
    <View />
    <Text>
      'Hello'
    </Text>
  </View>
</RCTSafeAreaView>
`;
